Bug 429817 - "background-image not working in non-chrome user stylesheets in thunderbird" [r=dveditz r=neil sr=bienvenu]